Fix gaping OAuth bug: multi-use failure

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ hr {
   -moz-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
+  max-width: 500px;
 }
 
 .centered-top {
@@ -57,17 +58,37 @@ button .octicon {
   border: 0px solid transparent;
   box-shadow: 0px 0px 4px #ccc;
 }
-.panel-success .panel-heading {
+.panel-success .panel-heading,
+.alert-success {
   color: #fff;
   background-color: #5cb85c;
 }
-.panel-warning .panel-heading {
+.panel-warning .panel-heading,
+.alert-warning {
   color: #fff;
   background-color: #ff8900;
 }
-.panel-danger .panel-heading {
+.panel-danger .panel-heading,
+.alert-danger {
   color: #fff;
   background-color: #e53a3a;
+}
+.alert h5 {
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+.alert .close {
+  color: #fff;
+  opacity: .6!important;
+}
+.alert .close:hover {
+  color: #fff;
+  opacity: 1!important;
+}
+.alert
+{
+  text-align: left;
+  border-radius: 0;
 }
 .progress {
   height: 12px;
@@ -96,10 +117,13 @@ button .octicon {
   font-size: 1.2em;
 }
 .panel-title .glyphicon,
-.panel-title .fa {
+.panel-title .fa,
+.alert .fa,
+.alert .glyphicon {
   margin-right: 8px!important;
 }
-.panel-title .octicon {
+.panel-title .octicon,
+.alert .octicon {
   margin-right: 4px!important;
 }
 .modal-title span {
@@ -118,8 +142,9 @@ button .octicon {
   margin-bottom: 0px;
 }
 
-button.btn {
-  border-radius: 0px;
+button.btn,
+.progress {
+  border-radius: 0;
 }
 #loading button.btn {
   font-size: 16px;
